test: dto model service controller repository and integration tests